# klab

./: .gitignore  1.cpp  3rd.cmake  3rd.cmake.bak  CMakeLists.txt  CMakeLists.txt.bak  README.md  a.out  main.cpp
benchmark_case/: CMakeLists.txt  case_1.cpp  demo.cpp
cpp_concurrency/: 2.cpp  3.cpp  a.out
src/: CMakeLists.txt  eigen_test.cpp  example1  example1.txt  gmon.out  ios_service_strand.cpp  lock_free.cpp  main.cpp  scop_guard.cpp  shared_ptr.cpp  shared_ptr2.cpp  test_shard_ptr.cpp  test_shard_ptr.cpp_  timer.cpp  unique_ptr.cpp
tar/gperftools-2.10/: Makefile  addressmap_unittest  atomicops_unittest  binary_trees  binary_trees_shared  config.status  current_allocated_bytes_test  debugallocation_test  frag_unittest  getpc_test  heap-checker_debug_unittest  heap-checker_unittest  heap-profiler_debug_unittest  heap-profiler_unittest  libfake_stacktrace_scope.la  liblogging.la  libmaybe_threads.la  libprofiler.la  libprofiler.pc  librun_benchmark.la  libspinlock.la  libstacktrace.la  libsysinfo.la  libtcmalloc.la  libtcmalloc.pc  libtcmalloc_and_profiler.la  libtcmalloc_debug.la  libtcmalloc_debug.pc  libtcmalloc_internal.la  libtcmalloc_internal_with_asserts.la  libtcmalloc_minimal.la  libtcmalloc_minimal.pc  libtcmalloc_minimal_debug.la  libtcmalloc_minimal_debug.pc  libtcmalloc_minimal_internal.la  libtcmalloc_with_asserts.la  libtool  low_level_alloc_unittest  malloc_bench  malloc_bench_shared  (+41 more)
tar/gperftools-2.10/.libs/: binary_trees_shared  current_allocated_bytes_test  debugallocation_test  frag_unittest  heap-checker_debug_unittest  heap-checker_unittest  heap-profiler_debug_unittest  heap-profiler_unittest  libprofiler.lai  libprofiler.so.0.5.5  libtcmalloc.lai  libtcmalloc.so.4.5.10  libtcmalloc_and_profiler.lai  libtcmalloc_and_profiler.so.4.6.5  libtcmalloc_debug.lai  libtcmalloc_debug.so.4.5.10  libtcmalloc_minimal.lai  libtcmalloc_minimal.so.4.5.10  libtcmalloc_minimal_debug.lai  libtcmalloc_minimal_debug.so.4.5.10  malloc_bench_shared  malloc_bench_shared_full  malloc_extension_c_test  malloc_extension_debug_test  malloc_extension_test  malloc_hook_test  markidle_unittest  memalign_debug_unittest  memalign_unittest  packed_cache_test  page_heap_test  pagemap_unittest  profile_handler_unittest  profiledata_unittest  profiler2_unittest  profiler3_unittest  raw_printer_test  realloc_debug_unittest  realloc_unittest  sampler_debug_test  (+16 more)
tar/gperftools-2.10/benchmark/: run_benchmark.lo
tar/gperftools-2.10/benchmark/.deps/: binary_trees-binary_trees.Po  binary_trees_shared-binary_trees.Po  malloc_bench-malloc_bench.Po  malloc_bench_shared-malloc_bench.Po  malloc_bench_shared_full-malloc_bench.Po  run_benchmark.Plo
tar/gperftools-2.10/src/: config.h  fake_stacktrace_scope.lo  libtcmalloc_and_profiler_la-heap-checker-bcad.lo  libtcmalloc_and_profiler_la-heap-checker.lo  libtcmalloc_and_profiler_la-profile-handler.lo  libtcmalloc_and_profiler_la-profiledata.lo  libtcmalloc_and_profiler_la-profiler.lo  libtcmalloc_and_profiler_la-tcmalloc.lo  libtcmalloc_debug_la-debugallocation.lo  libtcmalloc_debug_la-heap-checker-bcad.lo  libtcmalloc_debug_la-heap-checker.lo  libtcmalloc_internal_la-central_freelist.lo  libtcmalloc_internal_la-common.lo  libtcmalloc_internal_la-emergency_malloc.lo  libtcmalloc_internal_la-emergency_malloc_for_stacktrace.lo  libtcmalloc_internal_la-heap-profile-table.lo  libtcmalloc_internal_la-heap-profiler.lo  libtcmalloc_internal_la-internal_logging.lo  libtcmalloc_internal_la-malloc_extension.lo  libtcmalloc_internal_la-malloc_hook.lo  libtcmalloc_internal_la-memfs_malloc.lo  libtcmalloc_internal_la-memory_region_map.lo  libtcmalloc_internal_la-page_heap.lo  libtcmalloc_internal_la-raw_printer.lo  libtcmalloc_internal_la-sampler.lo  libtcmalloc_internal_la-span.lo  libtcmalloc_internal_la-stack_trace_table.lo  libtcmalloc_internal_la-static_vars.lo  libtcmalloc_internal_la-symbolize.lo  libtcmalloc_internal_la-system-alloc.lo  libtcmalloc_internal_la-thread_cache.lo  libtcmalloc_internal_with_asserts_la-central_freelist.lo  libtcmalloc_internal_with_asserts_la-common.lo  libtcmalloc_internal_with_asserts_la-emergency_malloc.lo  libtcmalloc_internal_with_asserts_la-emergency_malloc_for_stacktrace.lo  libtcmalloc_internal_with_asserts_la-heap-profile-table.lo  libtcmalloc_internal_with_asserts_la-heap-profiler.lo  libtcmalloc_internal_with_asserts_la-internal_logging.lo  libtcmalloc_internal_with_asserts_la-malloc_extension.lo  libtcmalloc_internal_with_asserts_la-malloc_hook.lo  (+38 more)
tar/gperftools-2.10/src/.deps/: fake_stacktrace_scope.Plo  libtcmalloc_and_profiler_la-heap-checker-bcad.Plo  libtcmalloc_and_profiler_la-heap-checker.Plo  libtcmalloc_and_profiler_la-profile-handler.Plo  libtcmalloc_and_profiler_la-profiledata.Plo  libtcmalloc_and_profiler_la-profiler.Plo  libtcmalloc_and_profiler_la-tcmalloc.Plo  libtcmalloc_debug_la-debugallocation.Plo  libtcmalloc_debug_la-heap-checker-bcad.Plo  libtcmalloc_debug_la-heap-checker.Plo  libtcmalloc_internal_la-central_freelist.Plo  libtcmalloc_internal_la-common.Plo  libtcmalloc_internal_la-emergency_malloc.Plo  libtcmalloc_internal_la-emergency_malloc_for_stacktrace.Plo  libtcmalloc_internal_la-heap-profile-table.Plo  libtcmalloc_internal_la-heap-profiler.Plo  libtcmalloc_internal_la-internal_logging.Plo  libtcmalloc_internal_la-malloc_extension.Plo  libtcmalloc_internal_la-malloc_hook.Plo  libtcmalloc_internal_la-memfs_malloc.Plo  libtcmalloc_internal_la-memory_region_map.Plo  libtcmalloc_internal_la-page_heap.Plo  libtcmalloc_internal_la-raw_printer.Plo  libtcmalloc_internal_la-sampler.Plo  libtcmalloc_internal_la-span.Plo  libtcmalloc_internal_la-stack_trace_table.Plo  libtcmalloc_internal_la-static_vars.Plo  libtcmalloc_internal_la-symbolize.Plo  libtcmalloc_internal_la-system-alloc.Plo  libtcmalloc_internal_la-thread_cache.Plo  libtcmalloc_internal_with_asserts_la-central_freelist.Plo  libtcmalloc_internal_with_asserts_la-common.Plo  libtcmalloc_internal_with_asserts_la-emergency_malloc.Plo  (+60 more)
(+99 files in other folders)
